# audio_analysis

./: .gitignore  analisi_canti_005.py  analisi_singoli_canti_da_json_con_salvataggio.py  main.py  main_program.py  main_program.py.NOT_IN_USE  main_program_multi.py  main_program_multi.py.DISABLED  main_program_multi.spec  main_program_multi_sc2.py  oscillogram.py  pyproject.toml  start.bash  wav_cutting.py
analisi_canti/: __main__.py  main.py
analisi_canti/plugins/: wav_cutting.py.disabled
manuale/: Sergio.lnk  manuale_uso_canti.docx
plugins/: analisi_canti.py  analisi_canti_005.py  analisi_singoli_canti.py  find_calls.py  find_calls.py.disabled  find_calls2.py  inviluppo_2.py  trova_picchi_vs2.py  wav_cutting.py
src/: start.bat
src/analisi_canti/: call_schema.py  json_process.py  main.py  oscillogram.py  rifai_canti_lunghi_daJsons.py  wav_cutting.py
src/analisi_canti/plugins/: analisi_canti_lunghi.py  analisi_singoli_canti.py  analisi_singoli_canti_da_json_modificatoENV50.py  analisi_tutti_canti_da_json_aprile16.py  analisi_tutti_canti_da_json_vs2.py  call_analysis.py  find_calls.py  trova_picchi_vs2.py
src/plugins/: find_calls.py.disabled
