[project]
name = "audio-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "librosa>=0.10.2.post1",
    "matplotlib>=3.10.0",
    "pyinstaller>=6.12.0",
    "pyside6>=6.8.2.1",
    "scipy>=1.15.1",
    "sounddevice>=0.5.1",
    "wavfile>=4.7.2",
]
