[project]
name = "analisi_canti"
version = "0.0.4"
description = "Analisi canti"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "librosa>=0.10.2.post1",
    "matplotlib>=3.10.0",
    "pyinstaller>=6.12.0",
    "pyside6>=6.8.2.1",
    "scipy>=1.15.1",
    "sounddevice>=0.5.1",
    "wavfile>=4.7.2",
]

classifiers=[
        "Operating System :: OS Independent",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Education",
        "Programming Language :: Python :: 3.13",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Visualization",
        "Operating System :: OS Independent"
    ]
